--- a/public/locales/he/translation.json
+++ b/public/locales/he/translation.json
@@ -562,5 +562,9 @@
   "advantages-mobile-t": "תאימות מלאה למובייל",
   "advantages-mobile-p": "אפשרו לעצמיכם לנהל את קשרי הלקוחות מהמובייל בדיוק כמו מהמשרד. נצלו את יכולות העבודה בשטח והגדילו פריון.",
   "advantages-roi-t": "החזר השקעה גבוה",
-  "advantages-roi-p": "ייעלו בצורה דרמטית את תהליכי העבודה. הגדילו את ההכנסות ושפרו משמעותית את שורת הרווח ברמה חודשית, רבעונית ושנתית."
+  "advantages-roi-p": "ייעלו בצורה דרמטית את תהליכי העבודה. הגדילו את ההכנסות ושפרו משמעותית את שורת הרווח ברמה חודשית, רבעונית ושנתית.",
+  "kanban-open": "פתוח",
+  "kanban-ongoing": "ביצוע",
+  "kanban-closed": "סגור"
+
 }
